--- a/index.html
+++ b/index.html
@@ -17,10 +17,105 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="header" class="container-fluid">
-        <div class="row justify-content-end">
-            <div class="col-1">
-                My Cart <span id="cartNum">(0)</span>
+    <div class="container-fluid">
+        <div id="header" class="row justify-content-end">
+            <div class="col-4 col-md-1">
+                <div id="dropdown-container" class="dropdown">
+                    <div class="dropdown-toggle" id="cartDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="2,0">
+                        My Cart (<span id="cartNum">0</span>)
+                    </div>
+
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="cartDropdown">
+                        <div id="border-top"></div>
+                        <p id="emptyCart">Your cart is empty</p>
+
+                        <div class="container-fluid cart-contents">
+                            <div id="prodSmall" class="row">
+                                <input type="hidden" id="smallQty" value="0">
+
+                                <div class="col-5">
+                                    <img src="images/classic-tee.jpg" class="img-fluid">
+                                </div>
+
+                                <div class="col cart-details">
+                                    <div class="row">
+                                        <div class="col">
+                                            Classic Tee
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col">
+                                            <span id="smlQty"></span>x <span style="font-weight:bold;">$75.00</span>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col">
+                                            Size: S
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="prodMedium" class="row">
+                                <input type="hidden" id="mediumQty" value="0">
+
+                                <div class="col-5">
+                                    <img src="images/classic-tee.jpg" class="img-fluid">
+                                </div>
+
+                                <div class="col cart-details">
+                                    <div class="row">
+                                        <div class="col">
+                                            Classic Tee
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col">
+                                            <span id="medQty"></span>x <span style="font-weight:bold;">$75.00</span>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col">
+                                            Size: M
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div id="prodLarge" class="row">
+                                <input type="hidden" id="largeQty" value="0">
+
+                                <div class="col-5">
+                                    <img src="images/classic-tee.jpg" class="img-fluid">
+                                </div>
+
+                                <div class="col cart-details">
+                                    <div class="row">
+                                        <div class="col">
+                                            Classic Tee
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col">
+                                            <span id="lgeQty"></span>x <span style="font-weight:bold;">$75.00</span>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col">
+                                            Size: L
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="col-1"></div>
@@ -29,11 +124,11 @@
 
     <div class="container prod-details">
         <div class="row">
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
                 <img src="images/classic-tee.jpg" class="img-fluid">
             </div>
 
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
                 <div class="row py-2">
                     <div class="col">
                         <h1>Classic Tee</h1>
